fix: Remove unnecessary text-center alignment from the first cell of table rows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -544,10 +544,6 @@ pre code.hljs {
     @apply underline underline-offset-2 decoration-tertiary text-tertiary;
   }
 
-  table tr td:first-child {
-    @apply text-center;
-  }
-
   strong {
     @apply font-semibold text-tertiary;
   }
